# node-modules-remover

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  install.sh
.github/workflows/: build.yml  release.yml
src/: main.rs  scanner.rs  ui.rs
