[package]
name = "nm-remover"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A TUI tool to find and remove node_modules folders"
license = "MIT"
repository = "https://github.com/yourusername/nm-remover"
keywords = ["node_modules", "cleanup", "tui", "cli"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "nm-remover"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
bytesize = "1.3"
rayon = "1.10"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
